# dog-classifier-pl

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cy.yml
config/: eval.yaml  infer.yaml  train.yaml
config/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  rich_progress_bar.yaml
config/data/: dog.yaml
config/experiment/: dogclassifier_ex.yaml
config/hydra/: default.yaml
config/logger/: default.yaml
config/model/: timm_classify.yaml
config/paths/: default.yaml
config/trainer/: default.yaml
logs/: classification_report.txt
src/: eval.py  infer.py  train.py
src/datamodules/: dog_datamodule.py  dogmodule.py
src/model/: dog_classifier.py  dogclassifier  timm_classifier.py
src/utils/: log_utils.py  task_wrapper.py
tests/: conftest.py  test_config.py  test_dog_classifier.py  test_dog_module.py
